# d4d-mission-metabolism

./: .gitignore  AGENTS.md  DESIGN.md  Deep-Research-for-AGENTS.md  Start-D4D.cmd  deep-research-report.md
.omo/evidence/: deep-research-for-agents-improvement-pass-gate-review.md  deep-research-improvements-backend-code-review.md  deep-research-improvements-final-regate-gate-review.md  deep-research-improvements-followup-visual-gate-review.md  deep-research-improvements-followup-visual-regate-gate-review.md  deep-research-improvements-gate-review.md  deep-research-improvements-visual-gate-review.md  frontend-follow-up-code-review.md  frontend-working-tree-diff-code-review.md  ulw-add-qa-improvements-code-review.md  ulw-add-qa-improvements-gate-review.md  visual-qa-pass-a-gate-review.md
backend/: pyproject.toml
backend/src/d4d_mission/: allocation_application.py  allocation_explanations.py  allocation_movement.py  allocation_scoring.py  allocator.py  battery_rotation.py  blackbox.py  capability.py  capability_gap.py  catalog.py  decay.py  deployment.py  immune.py  immune_actions.py  immune_card_helpers.py  immune_cards.py  main.py  metabolism.py  models.py  response_planner.py  runtime_support.py  scenario.py  scenario_events.py  scenario_seed.py  state.py  types.py
backend/tests/: test_allocator.py  test_api.py  test_capability_gap.py  test_core.py  test_decay.py  test_immune.py
frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
frontend/src/: App.css  App.tsx  api.ts  customMissionPayload.ts  (+18 more)
scripts/: start-d4d.ps1
(+101 files in other folders)
