[project]
name = "d4d-mission-backend"
version = "0.1.0"
description = "Capability-centric Mission Metabolism backend demo"
readme = "../deep-research-report.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "ruff>=0.15.20",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
executionEnvironments = [{ root = "src", extraPaths = ["src"] }]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportUnusedFunction = "none"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D",
    "D203",
    "D213",
    "FBT001",
    "FBT002",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"src/d4d_mission/main.py" = ["C901"]
"tests/**/*.py" = ["ARG", "D", "PLR2004", "S101", "SLF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
pythonpath = ["src"]
